@startuml classdiag

class Leg {
    {field}
    -LinearActuator: motor1
    -LinearActuator: motor2
    -LinearActuator: motor3
}

class Nucleo {
    {field}
    -str: serial_port
    -str: baudrate
    -Serial: serial
    {method}
    -send_command(float)
    -read_serial()
}

class LinearActuator {
    {method}
    -go_to(float)
    {field}
    -Motor: motor
}

class Motor {
    {field}
    -Nucleo: nucleo
    -str: leg
    -str: motor
    {method}
    -go_to_serialized(float)
}

Nucleo *-- Motor: 2
Leg *-- LinearActuator: 3
Motor *-- LinearActuator 

@enduml